--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ php:
     - 5.3
     - 5.4
 
-script: phpunit --bootstrap tests/bootstrap.php
+script: phpunit --bootstrap tests/bootstrap.php ./tests
