--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ before_script:
  
 script: 
    - cd ./tests/  
-   - phpunit --bootstrap bootstrap.php
+   - phpunit --bootstrap bootstrap.php UnitTest
