--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,6 @@
     "description": "A small PHP project that insert semantic on classes using annotations.",
     "keywords": ["annotation", "filter"],
     "homepage": "https://github.com/cloudson/SimpleAnnotation",
-    "repositories": {
-        "Respect/Validation": {
-            "vcs": {
-                "url" : "git://github.com/cloudson/SimpleAnnotation.git"
-            }
-        }
-    },
     "license" : "",
     "authors" : [
         {
@@ -21,6 +14,6 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "Respect\\Validation":">=0.3.5"
+        "Respect/Validation":"*"
     }
 }
