--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ php:
 before_script:
     - sudo apt-get install php-apc 
     - echo "extension=php-apc.so" >> `php --ini | grep "Loaded Configuration" | sed -e "s|.*:\s*||"` 
-    - git submodule update --init
+    - curl -s http://getcomposer.org/installer | php
+    - php composer.phar install
  
 script: 
    - cd ./tests/  
