--- a/composer.json
+++ b/composer.json
@@ -16,4 +16,9 @@
         "php": ">=5.3.0",
         "Respect/Validation":"*"
     }
+    "autoload": {
+        "psr-0": {
+            "SimpleAnnotation": "library\/"
+        }
+    }
 }
