--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ php:
 before_script:
     - curl -s http://getcomposer.org/installer | php
     - php composer.phar install
+    - chmod -R 777 ./library/SimpleAnnotation/cache/
  
 script: 
    - cd ./tests/  
